fixed venue/stay cards on home page, also trying to fix search and select bar on tablet and mobile

--- a/src/CSS_Modules/Home/home.module.css
+++ b/src/CSS_Modules/Home/home.module.css
@@ -111,6 +111,7 @@ margin-top: -18px;
   display: flex;
   flex-direction: row;
   gap: 20px;
+  height: 30px;
 }
 
 .selectDropDown {
@@ -267,6 +268,14 @@ width: 200px;
   flex-direction: row;
   align-items: center;
 }
+.location{
+  max-width: 200px;
+  text-wrap: wrap;
+  overflow-wrap: break-word;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 
 .stayImageContainer{
   display: flex;
@@ -383,6 +392,7 @@ display: flex;
   flex-direction: column;
   gap: 8px;
 align-items: center;
+
 }
 
 .searchIcon {
@@ -647,7 +657,8 @@ display: flex;
     align-items: center;
     background-color: var(--primary-color-2);
     width: 295px;
-    height: 50px;
+    height: 200px;
+
     border-radius: 18px;
   }
 
